# quickapp

./: .env.example  .gitignore  AGENTS.md  PROJECT_SUMMARY.md  README.md  agent.py  generator.py  pyproject.toml  quickapp.py  templates.py  ui.py
